--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body{
+    font-family: 'Roboto Mono', monospace;
     margin:0;
     padding:0;
     right:0;
@@ -41,3 +43,70 @@ header .header-icons-container .icons {
     margin-right: 50px;
 
 }
+
+header .header-icons-container .icons span{
+    color:white
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 90px;
+}
+
+nav .nav-logo-container img{
+    width: 200px;
+    margin-top: 10px;
+}
+
+nav .profile-link{
+    display: flex;
+    align-items: center;
+    justify-content:flex-end;
+    margin-right: 50px;
+}
+
+nav .profile-link a {
+    color:black;
+    border-bottom: 1px solid black;
+}
+
+.home-main {
+    display:grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    height: 600px;
+    background-image: url('..//assets/img/Cover.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    margin-top: 20px;
+}
+
+ .home-main section {
+    display: grid;
+    grid-column: 2;
+    justify-items: center;
+    height: 350px;
+    margin-top: 80px;
+ }
+
+ .home-main-text {
+    font-family: 'Roboto mono', monospace;
+    font-size: 30px;
+    font-weight: 700px;
+    letter-spacing: 10px;
+    color: white;
+    text-align: center;
+ }
+
+ .home-main-button {
+    width: 210px;
+    height: 50px;
+    background-color: #47cfac;
+    text-align: center;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 50px;
+ }
+
+
