--- a/CSS/blogs.css
+++ b/CSS/blogs.css
@@ -66,7 +66,7 @@ nav .profile-link{
     display: flex;
     align-items: center;
     justify-content:flex-end;
-    margin-right: 100px;
+    margin-right: 50px;
 }
 
 nav .profile-link a {
@@ -75,40 +75,72 @@ nav .profile-link a {
 }
 
 .home-main {
-    display:grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    height: 960px;
-    background-image: url('..//assets/img/Cover.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
+  display:grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  height: 600px;
+  background-image: url('..//assets/img/Cover.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 
- .home-main section {
+.home-main section {
+  display: grid;
+  grid-column: 2;
+  justify-items: center;
+  height: 350px;
+  margin-top: 80px;
+}
+
+.home-main-text {
+  font-size: 30px;
+  font-weight: 700px;
+  letter-spacing: 10px;
+  color: white;
+  text-align: center;
+}
+
+.home-main-button {
+  width: 210px;
+  height: 50px;
+  background-color: #48cfad;
+  text-align: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 50px;
+}
+.noticias{
     display: grid;
-    grid-column: 2;
+    grid-template-columns: 1fr 2.5fr 1.5fr 1fr;
+    height: 90px;
+    justify-content: center;
     align-items: center;
-    justify-items: center;
-    height: 350px;
-    margin-top: 80px;
+}
+
+section .noticia-principal {
+  width: 600px;
+}
+
+.foto {
+    grid-column: 2;
+}
+
+.titulo {
+    grid-column: 3;
+}
+
+.first-text-blog {
+    font-size: 25px;
+    font-weight: 480px;
+    letter-spacing: 1px;
+    color: black;
+    ;
  }
 
- .home-main-text {
-    font-size: 30px;
-    font-weight: 700px;
-    letter-spacing: 10px;
-    color: white;
-    text-align: center;
+ .title-blog {
+    font-size: 20px;
+    font-weight: 480px;
+    letter-spacing: 1px;
+    color: black;
+    
  }
-
- .home-main-button {
-    width: 210px;
-    height: 50px;
-    background-color: #48cfad;
-    text-align: center;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 50px;
- }
-
-
